overflow mobiles fix

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -63,6 +63,7 @@ a {
 
 body {
   top: 0!important;
+  overflow: hidden;
 }
 
 
